--- a/index.html
+++ b/index.html
@@ -68,3 +68,23 @@
   <a href="contact-me.html">Contact Me</a>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Inputs</title>
+  </head>
+  <body>
+    <form>
+    <input type="text"><br>
+    <input type="submit"><br>
+    <input type="file"><br>
+    <input type="date"><br>
+ <input type="radio"><br>
+<input type="range"><br>
+    </form>
+
+  </body>
+</html>
